@@ -7,6 +7,10 @@ grub2 (2.04-10) UNRELEASED; urgency=medium
   * When upgrading grub-pc noninteractively, bail out if grub-install fails.
     It's better to fail the upgrade than to produce a possibly-unbootable
     system.
+  * Explicitly check whether the target device exists before running
+    grub-install, since grub-install copies modules to /boot/grub/ before
+    installing the core image, and the new modules might be incompatible
+    with the old core image (closes: #966575).
 
  -- Ian Campbell <ijc@debian.org>  Sat, 27 Jun 2020 10:32:02 +0100
 
